# lazyreporting

./: .gitignore  README.md  flake.nix  pyproject.toml
lazyreporting/: app.py  config.py  jira_client.py  watson.py
lazyreporting/widgets/: calendar_widget.py  entry_form.py  issue_search.py  log_panel.py  summary_panel.py
