[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lazyreporting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.50",
  "requests",
  "pyyaml",
  "python-dateutil",
]

[project.scripts]
lr = "lazyreporting:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["lazyreporting*"]
